online-boutique/kustomize/patch-loadgenerator-users.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loadgenerator
  labels:
    app: loadgenerator
spec:
  template:
    spec:
      containers:
      - name: main
